packages/aces-amf-lib/tests/Generated_Samples_AMF/valid_AMFs/36_aces_2_0_hdr_p3.amf
<?xml version="1.0" encoding="UTF-8"?>
<aces:acesMetadataFile xmlns:aces="urn:ampas:aces:amf:v2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:cdl="urn:ASC:CDL:v1.01" version="2.0">
    <aces:amfInfo>
        <aces:description>ACES 2.0 HDR P3 ST.2084 Pipeline</aces:description>
        <aces:author>
            <aces:name>HDR Colorist</aces:name>
            <aces:emailAddress>hdr@postfacility.com</aces:emailAddress>
        </aces:author>
        <aces:dateTime>
            <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
            <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
        </aces:dateTime>
        <aces:uuid>urn:uuid:c1e1e2d4-c74d-4f21-a1fb-6705488176af</aces:uuid>
    </aces:amfInfo>
    <aces:pipeline>
        <aces:pipelineInfo>
            <aces:description>HDR Mastering with ACES 2.0 Output Transform</aces:description>
            <aces:dateTime>
                <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
                <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
            </aces:dateTime>
            <aces:uuid>urn:uuid:f1a1a79d-2435-49a7-9504-9ba41f1379c3</aces:uuid>
            <aces:systemVersion>
                <aces:majorVersion>2</aces:majorVersion>
                <aces:minorVersion>0</aces:minorVersion>
                <aces:patchVersion>0</aces:patchVersion>
            </aces:systemVersion>
        </aces:pipelineInfo>
        <aces:inputTransform applied="false">
            <aces:description>Sony Venice 2 S-Log3/S-Gamut3 to ACES2065-1</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v2.0:Input.Sony.Venice2.SLog3-SGamut3.a1.v1</aces:transformId>
        </aces:inputTransform>
        <aces:lookTransform applied="false">
            <aces:description>HDR Creative Grade in ACEScct</aces:description>
            <aces:cdlWorkingSpace>
                <aces:toCdlWorkingSpace>
                    <aces:description>ACES2065-1 to ACEScct</aces:description>
                    <aces:transformId>urn:ampas:aces:transformId:v2.0:CSC.ACES2065-1.ACEScct.a1.v1</aces:transformId>
                </aces:toCdlWorkingSpace>
                <aces:fromCdlWorkingSpace>
                    <aces:description>ACEScct to ACES2065-1</aces:description>
                    <aces:transformId>urn:ampas:aces:transformId:v2.0:CSC.ACEScct.ACES2065-1.a1.v1</aces:transformId>
                </aces:fromCdlWorkingSpace>
            </aces:cdlWorkingSpace>
            <cdl:ASC_SOP>
                <cdl:Slope>1.1 1.03 0.95</cdl:Slope>
                <cdl:Offset>0.0 0.0 0.0</cdl:Offset>
                <cdl:Power>1.0 1.0 1.0</cdl:Power>
            </cdl:ASC_SOP>
            <cdl:ASC_SAT>
                <cdl:Saturation>1.08</cdl:Saturation>
            </cdl:ASC_SAT>
        </aces:lookTransform>
        <aces:outputTransform applied="false">
            <aces:description>ACES 2.0 P3 D65 ST.2084 108 nit Output</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v2.0:Output.P3-D65.ST2084-108nits.a1.v1</aces:transformId>
        </aces:outputTransform>
    </aces:pipeline>
</aces:acesMetadataFile>
